# alteia-python-sdk

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
alteia/: __init__.py  sdk.py
alteia/apis/: provider.py
alteia/apis/client/analytics/: analyticsimpl.py  configurationsimpl.py  productsimpl.py
alteia/apis/client/annotations/: annotationsimpl.py
alteia/apis/client/auth/: companiesimpl.py  oauthclientsimpl.py  sharetokensimpl.py  usersimpl.py
alteia/apis/client/comments/: commentsimpl.py
alteia/apis/client/credentials/: credentialsimpl.py
alteia/apis/client/datacapture/: carriersimpl.py  carriersmodelsimpl.py  collectiontasksimpl.py  pilotsimpl.py  sensorsimpl.py  sensorsmodelsimpl.py  teamsimpl.py
alteia/apis/client/datamngt/: __init__.py  datasetsimpl.py
alteia/apis/client/datastream/: datastreamassetmonitoredimpl.py  datastreamsfilesimpl.py  datastreamsimpl.py
alteia/apis/client/datastreamtemplate/: datastreamtemplateimpl.py
alteia/apis/client/externalproviders/: credentialsimpl.py
alteia/apis/client/featuresservice/: collectionsimpl.py  featuresimpl.py
alteia/apis/client/projectmngt/: flightsimpl.py  missionsimpl.py  projectsimpl.py
alteia/apis/client/seasonplanner/: assessmentparameterestimationsimpl.py  assessmentparametervariablesimpl.py  cropsimpl.py  estimationmethodsimpl.py  fieldsimpl.py  growthstagesimpl.py  seasonplannermissionsimpl.py  trialsimpl.py
alteia/apis/client/tags/: tagsimpl.py
alteia/core/: config.py  errors.py
alteia/core/connection/: abstract_connection.py  async_connection.py  connection.py  credentials.py  token.py
alteia/core/resources/: comments.py  resource.py  sharetokens.py  tags.py  utils.py
alteia/core/resources/analytics/: products.py
alteia/core/resources/datamngt/: upload.py  uploader.py
alteia/core/resources/projectmngt/: flights.py  missions.py  projects.py
alteia/core/utils/: filehelper.py  geo_utils.py  requests.py  srs.py  typing.py  utils.py  versions.py  warnings.py
alteia/core/utils/vertcrs/: arbitrary.wkt  arbitrary_feet.wkt  arbitrary_feet_us.wkt  egm2008.wkt  egm2008_feet.wkt  egm2008_feet_us.wkt  egm96.wkt  egm96_feet.wkt  egm96_feet_us.wkt  wgs84.wkt  wgs84_feet.wkt  wgs84_feet_us.wkt
docs/: CHANGELOG.md  Makefile  api_reference.rst  code_examples.rst  conf.py  configuration.rst  create_project_with_images.rst  create_project_with_vector.rst  dataflow.rst  datasets.rst  first_steps.rst  how_to_upgrade.rst  index.rst  make.bat  missions.rst  projects.rst  reference.rst
docs/css/: style.css
tests/: alteiatest.py  logging-test.conf  url_mock.py
tests/core/: config-complete-connection.json  config-partial-connection.json  config-test.json  logging-test.conf  resource_test_base.py  test_annotations.py  test_collection_tasks.py  test_comments.py  test_config.py  test_connection.py  test_connection_credentials.py  test_credentials_service.py  test_datasets.py  test_datastream_template.py  test_flights.py  test_geo_utils.py  test_missions.py  test_pilot.py  test_projects.py  test_resources.py  test_sdk.py  test_tags.py  test_upload.py  test_utils.py  test_utils_requests.py  test_utils_srs.py  test_utils_versions.py
