[tool.poetry]
name = "alteia"
version = "2.12.1"  # must match the version in alteia/__init__.py
description = "High-level Python interface to Alteia API"
authors = ["Alteia Backend team <backend-team@alteia.com>"]
repository = "https://github.com/alteia-ai/alteia-python-sdk"
documentation = "https://alteia.readthedocs.io/en/latest/index.html"
license = "MIT"
readme = "README.md"
keywords = ["sdk",
            "alteia"]
packages = [{ include = "alteia" },]
include = ["core/utils/vertcrs/*.wkt", "py.typed"]
exclude = ["docs", "tests*"]
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Build Tools',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
      ]

[tool.poetry.dependencies]
python = "^3.6.1"
urllib3 = "1.26.16"
appdirs = "^1.4.3"
pathvalidate = "^2.3.0"
sphinx = {version = "^4.1.2", optional = true, python = ">=3.8"}
sphinx_autodoc_typehints = {version = "^1.12.0", optional = true, python = ">=3.8"}
sphinx-autobuild = {version = "^2021.3.14", optional = true, python = ">=3.8"}
recommonmark = {version = "^0.7.1", optional = true, python = ">=3.8"}
semantic-version = "^2.8.5"
importlib-resources = {version = ">=1.4", python = "<3.7"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pylint = "2.12.0"
pre-commit = "^2.6.0"
urllib3-mock = "^0.3.3"
mypy = "^0.910"
types-setuptools = "^57.4.0"
virtualenv = "^20.17.0"
tox = "3.23.0"

[tool.poetry.extras]
documentation = [
    "sphinx",
    "sphinx_autodoc_typehints",
    "sphinx-autobuild",
    "recommonmark"
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36, py37, py38
indexserver =
    default = https://pypi.org/simple

[testenv]
commands = pytest
deps =
    urllib3-mock>=0.3.3
    pytest-cov
    pytest
    coverage==4.5.4
    coverage[toml]==4.5.4


[testenv:py36]
commands = pytest
deps =
    pytest-cov
    urllib3-mock>=0.3.3
    pytest==7.0.0
    coverage==4.5.4
    coverage[toml]==4.5.4


[testenv:py37]
commands =
    coverage erase
    pytest --cov alteia --cov-report term --cov-report html
deps =
    pytest-cov>=2.10.0
    pytest
    coverage<5
    urllib3-mock>=0.3.3
    coverage==4.5.4
    coverage[toml]==4.5.4
"""

[tool.mypy]
ignore_missing_imports = false
namespace_packages = true

[[tool.mypy.overrides]]
module = "urllib3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "appdirs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pathvalidate"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "semantic_version"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "importlib_resources"
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
